--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         </section>
 
 
+
         
         <section class="section">
             <div class="category-container">
                 <div class="category">
-                    <img src="images/for mens.jpg">
+                    <img src="images/for men.jpg">
                     <button>for Men's</button>
                 </div>
                 <div class="category">
@@ -87,11 +88,11 @@
                     <button>for Kids</button>
                 </div>
                 <div class="category">
-                    <img src="images/for Accessories.jpg">
+                    <img src="images/for accessories.jpg">
                     <button>for Accessories</button>
                 </div>
                 <div class="category">
-                    <img src="images/for womens.jpg">
+                    <img src="images/for women.jpg">
                     <button>for Women's</button>
                 </div>
 
@@ -103,8 +104,9 @@
                 <h2>New Product</h2>
                 <div class="line"></div>
                 <div class="card-container flex">
+                    
                     <div class="card">
-                        <img src="images/card-images1.jpg">
+                        <img src="images/card-image1.jpg">
                         <div class="card-content">
                             <p class="title">
                                 Leather Black HandBag out edition
@@ -116,7 +118,7 @@
                         </div>
                     </div>
                      <div class="card sale">
-                        <img src="images/card-images2.jpg">
+                        <img src="images/card-image2.jpg">
                         <div class="card-content">
                             <p class="title">
                                 Leather Black HandBag out edition
@@ -127,8 +129,9 @@
                             </div>
                             <button class="add-t0-cart">Add to Cart</button>
                         </div>
-                    </div> <div class="card new">
-                        <img src="images/card-images3.jpg">
+                    </div> 
+                    <div class="card new">
+                        <img src="images/card-image3.jpg">
                         <div class="card-content">
                             <p class="title">
                                 Leather Black HandBag out edition
@@ -138,8 +141,9 @@
                             </div>
                             <button class="add-t0-cart">Add to Cart</button>
                         </div>
-                    </div> <div class="card new">
-                        <img src="images/card-images4.jpg">
+                    </div>
+                    <div class="card new">
+                        <img src="images/card-image4.jpg">
                         <div class="card-content">
                             <p class="title">
                                 Leather Black HandBag out edition
