i have added css separatly

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 
 
-    <link href="styles.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="NavSection.css" rel="stylesheet">
+    <link href="MainPageSec.css" rel="stylesheet">
+     <link href="HomeSection.css" rel="stylesheet">
 
 </head>
 
