--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </nav>
     </header>
 
-    <!--section here 31 minute-->
+    <!--Hero section here 31 minute -->
     <main>
         <section class="hero">
             <div class="hero-content flex container">
@@ -77,6 +77,7 @@
 
 
 
+        <!--Category Section-->
         
         <section class="section">
             <div class="category-container">
@@ -99,6 +100,8 @@
 
         </section>
 
+
+        <!--Product section-->
 
         <section class="section">
             <div class="container">
@@ -161,6 +164,7 @@
 
 
         </section>
+        
     </main>
 
 
