--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 
     <link href="NavSection.css" rel="stylesheet">
-    <link href="MainPageSec.css" rel="stylesheet">
-     <link href="HomeSection.css" rel="stylesheet">
+    <link href="HeroSection.css" rel="stylesheet">
+     <link href="CategoryProductSec.css" rel="stylesheet">
 
 </head>
 
@@ -164,7 +164,7 @@
 
 
         </section>
-        
+
     </main>
 
 
