your teamtes changes description

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="HeroSection.css" rel="stylesheet">
     <link href="CategoryProductSec.css" rel="stylesheet">
     <link href="WomenSection.css" rel="stylesheet">
+    <link href="headline.css" rel="stylesheet">
+
 
 
 </head>
@@ -320,15 +322,55 @@
             </div>
 
     </section>
+<!--head section-->
+    <section class="section">
+        <div class="secondary-bg">
+            <div class="container flex wrap">
+                <div class="box">
+                    <i class="fa-solid fa-truck"></i>
+                    <h5>
+                        <a href="#">Free Shipping</a>
+                    </h5>
+                    <p class="des">Free Shipping On Order Over $99</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-money-bill-1"></i>
+                    <h5>
+                        <a href="#">Cash On Delivery</a>
+                    </h5>
+                    <p class="des">The Internet Trend to Repeat</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-gift"></i>
+                    <h5>
+                        <a href="#">Gift For All</a>
+                    </h5>
+                    <p class="des">Receive Gift When Subscribe</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-clock"></i>
+                    <h5>
+                        <a href="#">Opening All Week</a>
+                    </h5>
+                    <p class="des">6.00 am - 7.00 pm</p>
+                </div>
+            </div>
+            
+
+        </div>
+
+
+
+
+
+    </section>
 
         </main>
 
 
-
-
-
-
-
     <script src="styles.js"></script>
-</body>
+
+
+
+  </body>
 </html>
