--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="CategoryProductSec.css" rel="stylesheet">
     <link href="WomenSection.css" rel="stylesheet">
     <link href="SignupSection.css" rel="stylesheet">
+    <link href="headline.cssg" rel="stylesheet">
+
 
 
 </head>
