--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <link href="HeroSection.css" rel="stylesheet">
     <link href="CategoryProductSec.css" rel="stylesheet">
     <link href="WomenSection.css" rel="stylesheet">
-    <link href="SignupSection.css" rel="stylesheet">
-    <link href="headline.cssg" rel="stylesheet">
+    <link href="Signup&Footer.css" rel="stylesheet">
+    <link href="headline.css" rel="stylesheet">
+    <link href="ImaheInfoSection.css" rel="stylesheet">
 
 
 
@@ -306,167 +307,163 @@
             </div>
 
         </section>
-         <section class="section">
-        <div class="secondary-bg">
-            <div class="container flex wrap">
-                <div class="box">
-                    <i class="fa-solid fa-truck"></i>
-                    <h5>
-                        <a href="#">Free Shipping</a>
-                    </h5>
-                    <p class="des">Free Shipping On Order Over $99</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-money-bill-1"></i>
-                    <h5>
-                        <a href="#">Cash On Delivery</a>
-                    </h5>
-                    <p class="des">The Internet Trend to Repeat</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-gift"></i>
-                    <h5>
-                        <a href="#">Gift For All</a>
-                    </h5>
-                    <p class="des">Receive Gift When Subscribe</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-clock"></i>
-                    <h5>
-                        <a href="#">Opening All Week</a>
-                    </h5>
-                    <p class="des">6.00 am - 7.00 pm</p>
+
+
+        <!--Image Info-->
+        <section class="section">
+            <div class="container">
+                <h2>New Latest</h2>
+                <div class="line"></div>
+
+                <div class="blog-container flex">
+                    <div class="blog-box">
+                        <img src="images/news-image1.jpg" alt="">
+                        <div class="blog-content">
+                            <h3 class="headings">New Trend 2025</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                            <a href="#" class="blog-link">Read More</a>
+                        </div>
+                    </div>
+
+                    <div class="blog-box">
+                        <img src="images/news-image2.jpg" alt="">
+                        <div class="blog-content">
+                            <h3 class="headings">New Trend 2025</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="#" class="blog-link">Read More</a>
+                        </div>
+                    </div>
+
+                    <div class="blog-box">
+                        <img src="images/news-image3.jpg" alt="">
+                        <div class="blog-content">
+                            <h3 class="headings">New Trend 2025</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="#" class="blog-link">Read More</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            
-
-        </div>
+        </section>
 
 
 
 
 
-    </section>
+
+
+        <!--Headline Section-->
+        <section class="section">
+            <div class="secondary-bg">
+                <div class="container flex wrap">
+                    <div class="box">
+                        <i class="fa-solid fa-truck"></i>
+                        <h5>
+                            <a href="#">Free Shipping</a>
+                        </h5>
+                        <p class="des">Free Shipping On Order Over $99</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-solid fa-money-bill-1"></i>
+                        <h5>
+                            <a href="#">Cash On Delivery</a>
+                        </h5>
+                        <p class="des">The Internet Trend to Repeat</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-solid fa-gift"></i>
+                        <h5>
+                            <a href="#">Gift For All</a>
+                        </h5>
+                        <p class="des">Receive Gift When Subscribe</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-solid fa-clock"></i>
+                        <h5>
+                            <a href="#">Opening All Week</a>
+                        </h5>
+                        <p class="des">6.00 am - 7.00 pm</p>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </section>
+
+
+
+
+
+
 
         <!-- SignUp Section-->
         <section class="section">
             <div class="secondary-bg">
-                <form class="container flex ">
+                <form class="container flex wrap">
                     <h3>Sign up for Send Newsletter</h3>
 
                     <div class="input-container flex">
                         <input type="email" name="email" id="email" placeholder="Your Email" autocomplete="off">
-                        <button>Subscibe</button>
+                        <button>Subscribe</button>
                     </div>
 
                     <div class="social-icons flex">
-                        <a href="#" class="media">
-                            <i class="fa-brands fa-facebook-f"></i>
-                        </a>
-                        <a href="#" class="media">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href="#" class="media">
-                            <i class="fa-brands fa-google"></i>
-                        </a>
-                        <a href="#" class="media">
-                            <i class="fa-brands fa-behance"></i>
-                        </a>
-                        <a href="#" class="media">
-                            <i class="fa-brands fa-linkedin"></i>
-                        </a>
-
-
+                        <a href="#" class="media"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="media"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#" class="media"><i class="fa-brands fa-google"></i></a>
+                        <a href="#" class="media"><i class="fa-brands fa-behance"></i></a>
+                        <a href="#" class="media"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-            </div>
-            </form>
+                </form>
             </div>
         </section>
     </main>
 
     <!--Footer Section-->
-    <footer>
-        <div class="container flex">
+    <footer class="section">
+        <div class="footer-container container flex wrap">
             <ul class="footer-list">
-                <li>
-                    <a href="#" class="footer-link">About us</a>
-                </li>
-                <li>
-                    <a href="#" class="footer-link">Online store</a>
-                </li>
-                <li>
-                    <a href="#" class="footer-link">Blog</a>
-                </li>
-                <li>
-                    <a href="#" class="footer-link">Contact Us</a>
-                </li>
+                <li><a href="#" class="footer-link">About us</a></li>
+                <li><a href="#" class="footer-link">Online store</a></li>
+                <li><a href="#" class="footer-link">Blog</a></li>
+                <li><a href="#" class="footer-link">Contact Us</a></li>
             </ul>
 
             <ul class="footer-list">
-                <li>
-                    <a href="#" class="footer-link">Login / Register</a>
-                </li>
-                <li>
-                    <a href="#" class="footer-link">Your cart</a>
-                </li>
-                <li>
-                    <a href="#" class="footer-link">Wishlist items</a>
-                </li>
-                <li>
-                    <a href="#" class="footer-link">Your checkout</a>
-                </li>
+                <li><a href="#" class="footer-link">Login / Register</a></li>
+                <li><a href="#" class="footer-link">Your cart</a></li>
+                <li><a href="#" class="footer-link">Wishlist items</a></li>
+                <li><a href="#" class="footer-link">Your checkout</a></li>
             </ul>
 
             <ul class="footer-list">
-                <li>
-                    <a href="#" class="footer-link">FAQs</a>
-                </li>
-                <li>
-                    <a href="#" class="footer-link">Term of services</a>
-                </li>
-                <li>
-                    <a href="#" class="footer-link">Privacy policy</a>
-                </li>
-                <li>
-                    <a href="#" class="footer-link">Returns</a>
-                </li>
+                <li><a href="#" class="footer-link">FAQs</a></li>
+                <li><a href="#" class="footer-link">Terms of services</a></li>
+                <li><a href="#" class="footer-link">Privacy policy</a></li>
+                <li><a href="#" class="footer-link">Returns</a></li>
             </ul>
 
             <ul class="footer-list">
-                <li class="footer-logo">
-                    <a href="#" class="logo">
-                        <!--<span> is an inline element, meaning it doesn’t break the text into a new line.-->
-                        Buzz<span>Buy.</span>
-                    </a>
+                <li class="footer-logo"><a href="#" class="logo">Buzz<span>Buy.</span></a></li>
                 <li>
-                    <p class="detail"> ABC City,XYZ Road</p>
+                    <p class="detail">ABC City, XYZ Road</p>
                 </li>
                 <li>
                     <p class="detail">+91 123 456 78</p>
                 </li>
                 <li>
-                    <p class="detail"> buzzbuy@gmail.com</p>
+                    <p class="detail">buzzbuy@gmail.com</p>
                 </li>
-                </li>
-
             </ul>
-
-
         </div>
+
         <div class="footer-bottom">
-            <p>Copyright &copy;2025
-                <a href="#" class="footer-link">BuzzBuy.</a>
-            </p>
+            <p>Copyright &copy; 2025 <a href="#" class="footer-link">BuzzBuy.</a></p>
         </div>
     </footer>
 
-
-
-
-
-
-
-    <script src="styles.js"></script>
+    <script src="main.js" defer></script>
 </body>
 
 </html>
